--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -44,6 +44,45 @@
             </div>
             <!-- Add more product-->
         </div>
+        <div class="product-grid">
+            <div class="product-card" style="transition: transform 0.3s ease; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <img src="rolls-royce-cullinan-4k-wm.jpg" alt="Car2" style="border-radius: 8px;">
+                <h3>Ferrai 250 GT</h3>
+                <p>$1200000.99</p>
+                <button style="background: linear-gradient(45deg, #333, #666);">Add to Cart</button>
+            </div>
+            <div class="product-card" style="transition: transform 0.3s ease; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <img src="rolls-royce-cullinan-4k-wm.jpg" alt="Car2" style="border-radius: 8px;">
+                <h3>Rolls Royle Cullian</h3>
+                <p>$1200000.99</p>
+                <button style="background: linear-gradient(45deg, #333, #666);">Add to Cart</button>
+            </div>
+            
+        </div>
+    </section>
+    <section class="featured1">
+        <h2>Old Beauties</h2>
+        <div class="product-grid">
+            <div class="product-card" style="transition: transform 0.3s ease; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <img src="lamborghini-aventador-sv-2018-s4.jpg" alt="Car1" style="border-radius: 8px;">
+                <h3>Lamborgini Aventador</h3>
+                <p>$69999.99</p>
+                <button style="background: linear-gradient(45deg, #333, #666);">Add to Cart</button>
+            </div>
+            <div class="product-card" style="transition: transform 0.3s ease; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <img src="rolls-royce-cullinan-4k-wm.jpg" alt="Car2" style="border-radius: 8px;">
+                <h3>Rolls Royle Cullian</h3>
+                <p>$1200000.99</p>
+                <button style="background: linear-gradient(45deg, #333, #666);">Add to Cart</button>
+            </div>
+            <div class="product-card" style="transition: transform 0.3s ease; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <img src="rolls-royce-cullinan-4k-wm.jpg" alt="Car2" style="border-radius: 8px;">
+                <h3>Rolls Royle Cullian</h3>
+                <p>$1200000.99</p>
+                <button style="background: linear-gradient(45deg, #333, #666);">Add to Cart</button>
+            </div>
+            <!-- Add more product-->
+        </div>
     </section>
 
     <footer>
